# Push_swap

./: CMakeLists.txt  Makefile  README.md  main.c  push_swap.h
files/: double_operations.c  input_checker.c  operations.c  push_swap.c  stack_utils.c  swap_a.c  utils.c
files/algorithm/: array.c  huge_sort.c  mini_sort.c  sort.c  tools.c
files/checker/: checker.c  get_next_line.c  get_next_line_utils.c
files/stack_manipulations/: double_operations.c  forming.c  operations.c  tools.c
includes/: get_next_line.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_itoa.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_substr.c  libft.h
